# Prog2NHF

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.VSCodeCounter/2024-04-16_22-07-21/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-04-19_09-27-33/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-04-23_21-07-09/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
UML/Export/: class134658.html  class134786.html  class134914.html  class135042.html  class135170.html  class135298.html  class135426.html  class135554.html  class135682.html  class135810.html  class135938.html  class136066.html  class136194.html  class136322.html  (+65 more)
docs/: Dokumentacio.docx  doxyfile  ~$kumentacio.docx  ~WRL3766.tmp
src/: Circuit.cpp  Circuit.h  Component.cpp  Component.h  Exceptions.h  Exceptions.hpp  Gate.cpp  Gate.h  IOComponent.cpp  IOComponent.h  InputComponent.cpp  InputComponent.h  InputPin.cpp  InputPin.h  Lamp.cpp  Lamp.h  Menu.cpp  Menu.h  Node.cpp  Node.h  OutputComponent.cpp  OutputComponent.h  OutputPin.cpp  OutputPin.h  Peripherals.cpp  Peripherals.h  Pin.cpp  Pin.h  Queue.h  Queue.hpp  Signal.h  Signal.hpp  Source.cpp  Source.h  Switch.cpp  Switch.h  gtest_lite.h  main.cpp
test/: Errors.txt  Menu.cpp  Menu.h  TestHelpFunctions.h  TestMaterial_InputTest1.txt  TestMaterial_InputTest2.txt  TestMaterial_OutputTest.txt  UnitTest.cpp  hello.txt  proto_test.cpp  test_1.cpp
(+268 files in other folders)
